bugfix toggling topbar-item in vdi causes flickering due to animation

--- a/webapp/app/styles/dim-background.scss
+++ b/webapp/app/styles/dim-background.scss
@@ -1,5 +1,5 @@
 .dim-background {
-  @extend .transition-enabled-1;
+  @extend .transition-enabled;
   position: fixed;
   width: 100%;
   left: 0;
